[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "buildozer>=1.5.0",
    "docx>=0.2.4",
    "fpdf>=1.7.2",
    "kivy>=2.3.1",
    "openai>=1.63.0",
    "pillow>=11.1.0",
    "python-docx>=1.1.2",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
]
